--- a/memoteca/src/app/app.component.html
+++ b/memoteca/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-home></app-home>
+<app-cabecalho></app-cabecalho>
+<main>
+  <app-criar-pensamento></app-criar-pensamento>
+</main>
+<app-rodape></app-rodape>
