--- a/memoteca/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/memoteca/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -4,14 +4,14 @@
   </header>
   <form>
     <label for="pensamento">Pensamento</label>
-    <input [value]="pensamento.conteudo" type="textarea" class="input" id="pensamento" name="pensamento" placeholder="Digite o pensamento...">
+    <input [(ngModel)]="pensamento.conteudo" type="textarea" class="input" id="pensamento" name="pensamento" placeholder="Digite o pensamento...">
     <label for="autoria">Autoria</label>
-    <input [value]="pensamento.autoria" type="text" class="input" id="autoria" name="autoria" placeholder="Digite a autoria...">
+    <input [(ngModel)]="pensamento.autoria" type="text" class="input" id="autoria" name="autoria" placeholder="Digite a autoria...">
     <label for="modelo">Selecione o modelo do card</label>
     <div class="container-radio">
       <div class="radio-modelo">
         <label for="modelo1">
-          <input type="radio" id="modelo1" value="modelo1" name="modelo-card">
+          <input type="radio" id="modelo1" value="modelo1" name="modelo-card" [(ngModel)]="pensamento.modelo">
           <div class="custom-radio">
             <span></span>
           </div>
@@ -26,7 +26,7 @@
       </div>
       <div class="radio-modelo">
         <label for="modelo2">
-          <input type="radio" id="modelo2" value="modelo2" name="modelo-card">
+          <input type="radio" id="modelo2" value="modelo2" name="modelo-card" [(ngModel)]="pensamento.modelo">
           <div class="custom-radio">
             <span></span>
           </div>
@@ -41,7 +41,7 @@
       </div>
       <div class="radio-modelo">
         <label for="modelo3">
-          <input type="radio" id="modelo3" value="modelo3" name="modelo-card">
+          <input type="radio" id="modelo3" value="modelo3" name="modelo-card" [(ngModel)]="pensamento.modelo">
           <div class="custom-radio">
             <span></span>
           </div>
@@ -57,7 +57,7 @@
     </div>
     <div class="acoes">
       <button (click)="criarPensamento()" class="botao">Salvar</button>
-      <button (click)="cancelarPensamento()" class="botao">Cancelar</button>
+      <button routerLink="/listarPensamento" class="botao">Cancelar</button>
     </div>
   </form>
 </section>
