--- a/memoteca/src/app/components/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/memoteca/src/app/components/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -1,14 +1,24 @@
 <section class="container">
   <header class="header d-flex">
-    <h2 class="ff-inter">Menu Mural</h2>
-    <button routerLink="/criarPensamento" class="botao">Adicionar Pensamento</button>
+    <div class="buscar-pensamentos">
+      <input type="search" class="filtro" placeholder="O que você procura?..." autofocus [(ngModel)]="filtro" (keyup)="pesquisarPensamentos()">
+    </div>
+    <h2 class="ff-inter">{{ titulo }}</h2>
+    <div class="botoes">
+      <button class="botao" (click)="recarregarComponente()">Meu Mural</button>
+      <button class="botao" (click)="listaFavoritos()">Meus Favoritos</button>
+      <button routerLink="/criarPensamento" class="botao">Novo Pensamento</button>
+    </div>
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0, else semPensamentos">
     <div *ngFor="let pensamento of listaPensamentos">
-      <app-pensamento [pensamento]="pensamento"></app-pensamento>
+      <app-pensamento [pensamento]="pensamento" [listaFavoritos]="listarFavoritos"></app-pensamento>
     </div>
   </div>
 </section>
+<app-botao-carregar-mais [haMaisPensamentos]="haMaisPensamentos" (click)="carregarMaisPensamentos()">
+  
+</app-botao-carregar-mais>
 <ng-template #semPensamentos>
   <div class="ff-inter sem-pensamentos">
     <p>Ainda não há pensamentos cadastrados</p>
