--- a/memoteca/src/app/components/pensamentos/pensamento/pensamento.component.html
+++ b/memoteca/src/app/components/pensamentos/pensamento/pensamento.component.html
@@ -3,10 +3,13 @@
   <p class="conteudo">{{pensamento.conteudo}}</p>
   <p class="autoria"><b>{{pensamento.autoria}}</b></p>
   <div class="acoes">
-    <button class="botao-editar">
-      <img src="../../../../assets/imagens/icone-editar.png" alt="Icone de editar">
+    <button class="botao-favorito" (click)="atualizarFavoritos()">
+      <img src="../../../../assets/imagens/icone-favorito-{{mudarIconeFavorito()}}.png" alt="">
     </button>
-    <button class="botao-excluir">
+    <button class="botao-editar">
+      <img src="../../../../assets/imagens/icone-editar.png" alt="Icone de editar" routerLink="/pensamentos/editarPensamento/{{pensamento.id}}">
+    </button>
+    <button class="botao-excluir" routerLink="/pensamentos/excluirPensamento/{{pensamento.id}}">
       <img src="../../../../assets/imagens/icone-excluir.png" alt="Icone de excluir">
     </button>
   </div>
