--- a/2685-angular-rxjs-projeto-base/src/app/views/lista-livros/lista-livros.component.html
+++ b/2685-angular-rxjs-projeto-base/src/app/views/lista-livros/lista-livros.component.html
@@ -10,7 +10,13 @@
     </button>
   </div>
   <p>Busque por assunto, autoria, nome...</p>
-<div class="container-card" *ngIf="listaLivros?.length > 0, else telaInicial">
+  <div class="resultados mensagem-erro" *ngIf="mensagemDeErro">
+    {{ mensagemDeErro }}
+  </div>
+  <div class="resultados" *ngIf="livroEncontrados$ | async">
+    {{ livrosResultado.totalItems }} resultados encontrados
+  </div>
+<div class="container-card" *ngIf="livroEncontrados$ | async as listaLivros, else telaInicial">
   <div *ngFor="let livro of listaLivros">
     <app-livro [livro]="livro"></app-livro>
   </div>
