animações com angular

--- a/2806-animacoes-aula-5/src/app/lista-tarefas/lista-tarefas.component.html
+++ b/2806-animacoes-aula-5/src/app/lista-tarefas/lista-tarefas.component.html
@@ -93,8 +93,8 @@
         <p class="status-tarefa">
           <button
             [ngClass]="(tarefa.statusFinalizado == true) ? 'icone-checked' : 'icone-unchecked'"
-            (click)="finalizarTarefa(tarefa.id)"
-            [@checkButton]="(tarefa.id === id ? 'checked' : 'unchecked')"
+            (click)="finalizarTarefa(tarefa)"
+            [@checkButton]="(tarefa.id === id && tarefa.statusFinalizado ? 'checked' : 'unchecked')"
             >
           </button>
         </p>
@@ -112,7 +112,7 @@
             <img src="assets/icones/icone-editar.png" alt="Ícone de editar">
           </button>
           <button
-            (click)="excluirTarefa(tarefa.id)"
+            (click)="excluirTarefa(tarefa)"
             class="botao-deletar">
             <img src="assets/icones/icone-excluir.png" alt="Ícone de excluir">
           </button>
