--- a/2806-animacoes-aula-5/src/app/lista-tarefas/lista-tarefas.component.html
+++ b/2806-animacoes-aula-5/src/app/lista-tarefas/lista-tarefas.component.html
@@ -73,7 +73,7 @@
     <p class="ff-prompt">Procurando oque fazer?</p>
     <input type="search" id="campo-busca" placeholder="Busque por uma tarefa..." [(ngModel)]="campoBusca" (keyup)="filtrarTarefasPorDescricao(campoBusca)">
   </div>
-  <div *ngIf="tarefasFiltradas.length > 0, else semTarefas">
+  <div @listState *ngIf="tarefasFiltradas.length > 0, else semTarefas">
     <div
       @filterAnimation
       class="lista-tarefas card-{{ tarefa.categoria }}"
