--- a/jornada-1a1a3c686d3f2b708b5964b91fc455a418fffd67/src/app/shared/form-busca/dropdown-uf/dropdown-uf.component.html
+++ b/jornada-1a1a3c686d3f2b708b5964b91fc455a418fffd67/src/app/shared/form-busca/dropdown-uf/dropdown-uf.component.html
@@ -3,7 +3,7 @@
   <mat-icon matPrefix>
     {{ matPrefix }}
   </mat-icon>
-  <input matInput [formControl]="controller" [matAutocomplete]="auto">
+  <input class="mat-mdc-form-field" matInput [formControl]="controller" [matAutocomplete]="auto">
   <mat-icon matSuffix>search</mat-icon>
   <mat-autocomplete #auto="matAutocomplete">
     <mat-option *ngFor="let option of filteredOptions | async" [value]="option.nome">
