--- a/jornada-1a1a3c686d3f2b708b5964b91fc455a418fffd67/src/app/shared/form-busca/form-busca.component.html
+++ b/jornada-1a1a3c686d3f2b708b5964b91fc455a418fffd67/src/app/shared/form-busca/form-busca.component.html
@@ -1,5 +1,5 @@
 <app-card variant="secondary" class="form-busca">
-  <form [formGroup]="formBuscaService.formBusca" (ngSubmit)="mostarDados()">
+  <form [formGroup]="formBuscaService.formBusca" (ngSubmit)="buscar()">
     <h2>Passagens</h2>
     <div class="flex-container">
       <mat-button-toggle-group aria-label="Tipo de passagem" formControlName="somenteIda">
@@ -12,9 +12,17 @@
           SOMENTE IDA
         </mat-button-toggle>
       </mat-button-toggle-group>
-      <mat-chip-listbox (click)="openDialog()" aria-label="Seleção de passagens">
-        <mat-chip-option selected>1 adulto</mat-chip-option>
-        <mat-chip-option>Econômica</mat-chip-option>
+      <mat-chip-listbox aria-label="Seleção de passagens">
+        <mat-chip (click)="formBuscaService.openDialog()">
+          <div class="inner">
+            <mat-icon>check</mat-icon> 1 adulto
+          </div>
+        </mat-chip>
+        <mat-chip (click)="formBuscaService.openDialog()">
+          <div class="inner">
+            <mat-icon>check</mat-icon> Econômica
+          </div>
+        </mat-chip>
       </mat-chip-listbox>
     </div>
     <div class="flex-container">
@@ -29,7 +37,7 @@
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field> -->
 
-      <button mat-icon-button>
+      <button type="button" mat-icon-button (click)="formBuscaService.inverter()">
         <mat-icon>sync_alt</mat-icon>
       </button>
 
