--- a/jornada-1a1a3c686d3f2b708b5964b91fc455a418fffd67/src/app/shared/modal/modal.component.html
+++ b/jornada-1a1a3c686d3f2b708b5964b91fc455a418fffd67/src/app/shared/modal/modal.component.html
@@ -2,7 +2,10 @@
   <h1 mat-dialog-title>Viajante</h1>
   <div mat-dialog-content>
     <div class="selecao-idade">
-      <ul>
+      <app-seletor-passageiro [formControl]="formBuscaService.buscaForm('adultos')" titulo="Adultos" subtitulo="Acima de 12 anos"></app-seletor-passageiro>
+      <app-seletor-passageiro [formControl]="formBuscaService.buscaForm('criancas')" titulo="Crianças" subtitulo="Entre 2 e 11 anos"></app-seletor-passageiro>
+      <app-seletor-passageiro [formControl]="formBuscaService.buscaForm('bebes')" titulo="Bebês" subtitulo="Até 2 anos"></app-seletor-passageiro>
+      <!-- <ul>
         <li><strong>Adultos</strong></li>
         <li>(Acima de 12 anos)</li>
         <li>
@@ -28,13 +31,13 @@
           <span>1</span>
           <app-botao-controle operacao="incrementar"></app-botao-controle>
         </li>
-      </ul>
+      </ul> -->
     </div>
     <div class="selecao-categoria">
       <p><strong>Categoria</strong></p>
       <mat-chip-listbox aria-label="Seleção de passagens">
-        <mat-chip-option selected>1 adulto</mat-chip-option>
-        <mat-chip-option>Econômica</mat-chip-option>
+        <mat-chip-option [selected]="formBuscaService.formBusca.get('tipo')?.value === 'Econômica'" value="Econômica" (selectionChange)="formBuscaService.alterarTipo($event, 'Econômica')">Econômica</mat-chip-option>
+        <mat-chip-option [selected]="formBuscaService.formBusca.get('tipo')?.value === 'Executiva'" value="Executiva"  (selectionChange)="formBuscaService.alterarTipo($event, 'Executiva')">Executiva</mat-chip-option>
       </mat-chip-listbox>
     </div>
   </div>
