--- a/3213-jornada-milhas-projeto-base/src/app/shared/form-base/form-base.component.html
+++ b/3213-jornada-milhas-projeto-base/src/app/shared/form-base/form-base.component.html
@@ -5,7 +5,7 @@
           Crie sua conta
         </mat-card-title>
         <section>
-          <div class="acoesPerfil">
+          <div class="acoesPerfil" *ngIf="perfilComponent">
             <h2>Dados pessoais</h2>
             <button mat-stroked-button color="primary">
               <mat-icon>logout</mat-icon>
@@ -68,8 +68,8 @@
             </div>
           </div>
         </mat-card-content>
-        <mat-divider></mat-divider>
-        <div class="acessoPerfil">
+        <mat-divider  *ngIf="perfilComponent"></mat-divider>
+        <div class="acessoPerfil" *ngIf="perfilComponent">
           <h2>Dados de acesso</h2>
         </div>
         <mat-card-content>
@@ -94,11 +94,13 @@
                 <input matInput formControlName="confirmarEmail" placeholder="Digite seu e-mail novamente">
                 <mat-error *ngIf="cadastroForm.get('confirmarEmail')?.errors?.['required']">Confirmação de E-mail é obrigatória</mat-error>
                 <mat-error *ngIf="cadastroForm.get('confirmarEmail')?.errors?.['email']">E-mail inválido</mat-error>
+                <mat-error *ngIf="cadastroForm.get('confirmarEmail')?.errors?.['equalTo']">Emails não são iguais</mat-error>
               </mat-form-field>
               <mat-form-field appearance="outline">
                 <mat-label>Confirmar Senha</mat-label>
                 <input matInput formControlName="confirmarSenha" type="password" placeholder="Repita sua senha">
                 <mat-error *ngIf="cadastroForm.get('confirmarSenha')?.errors?.['required']">Confirmação de Senha é obrigatória</mat-error>
+                <mat-error *ngIf="cadastroForm.get('confirmarSenha')?.errors?.['equalTo']">Senhas não são iguais</mat-error>
               </mat-form-field>
             </div>
           </div>
@@ -108,7 +110,7 @@
           </mat-error>
         </mat-card-content>
         <mat-card-actions class="full-width">
-          <button mat-flat-button
+          <button (click)="executarAcao()" mat-flat-button
             [disabled]="cadastroForm.invalid"
             color="primary"
           >CADASTRAR
@@ -117,4 +119,3 @@
       </form>
     </mat-card>
   </app-container>
-  
