Implementando filtros de passagens

--- a/buscas/3325-jornada-milhas-main/src/app/shared/form-busca/form-busca.component.html
+++ b/buscas/3325-jornada-milhas-main/src/app/shared/form-busca/form-busca.component.html
@@ -44,13 +44,13 @@
       </div>
       <mat-form-field class="input-container" appearance="outline">
         <mat-label>Data de ida</mat-label>
-        <input matInput [matDatepicker]="ida">
+        <input matInput [matDatepicker]="ida" formControlName="dataIda">
         <mat-datepicker-toggle matIconSuffix [for]="ida"></mat-datepicker-toggle>
         <mat-datepicker #ida></mat-datepicker>
       </mat-form-field>
       <mat-form-field class="input-container" appearance="outline">
         <mat-label>Data da volta</mat-label>
-        <input matInput [matDatepicker]="volta">
+        <input matInput [matDatepicker]="volta" formControlName="dataVolta">
         <mat-datepicker-toggle matIconSuffix [for]="volta"></mat-datepicker-toggle>
         <mat-datepicker #volta></mat-datepicker>
       </mat-form-field>
