--- a/buscas/3325-jornada-milhas-main/src/app/pages/busca/busca.component.html
+++ b/buscas/3325-jornada-milhas-main/src/app/pages/busca/busca.component.html
@@ -1,9 +1,11 @@
 <div class="busca-page">
     <app-banner src="assets/imagens/banner-busca.png" alt="" /> 
     <app-container>
-            <app-form-busca></app-form-busca>
+            <app-form-busca (realizarBusca)="busca($event)"></app-form-busca>
             <section class="conteudo">
-                    Filtros, Cards de Recomendados e Cards de Passagens
+                <div class="passagens">
+                    <app-passagem *ngFor="let passagem of passagens" [passagem]="passagem"></app-passagem>
+                </div>
             </section>
     </app-container>
 </div>
